HUInfoComponent.jsx: hotfix barcode was not displayed

--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
@@ -1,6 +1,6 @@
 {
   "HU": "HU",
-  "barcode": "Barcode",
+  "qrCode": "QR code",
   "locator": "Locator",
   "product": "Product",
   "qty": "Quantity",
