--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
@@ -8,6 +8,9 @@
     "dispose": {
       "buttonCaption": "Dispose"
     },
+    "move": {
+      "buttonCaption": "Move"
+    },
     "scanAgain": {
       "buttonCaption": "Scan again"
     }
