--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
@@ -9,7 +9,8 @@
       "buttonCaption": "Dispose"
     },
     "move": {
-      "buttonCaption": "Move"
+      "buttonCaption": "Move",
+      "scanTarget": "Scan target"
     },
     "scanAgain": {
       "buttonCaption": "Scan again"
