mobile UI: Move HU (#12547)
* LocatorId.equals(id1, id2)

* HUMovementGenerateRequest.fromLocatorId: not mandatory

* IHUMovementBL.moveHUIdToLocator

* LocatorQRCode.isTypeMatching, ofGlobalQRCode

* REST API: POST .../hu/byId/{huId}/moveTo

* HUInfoComponent.jsx: hotfix barcode was not displayed

* HUMoveScreen prototype

* HUMoveScreen prototype

* QA

* QA

* minor cleanup

* HUMovementBLTest: fix test by making it a bit more solid

* IHUTrxBL: introduce extract extractHUFromParentIfNeeded(huContext, hu), cleanup

* HUTrxBL: avoid changing parent for an Aggregated TU

* HUEmptiesService: improve error message

* refactor/QA

* minor/QA

* NumberUtils: minor/QA

* RepoIdAwares.ofObject

* HuId.ofObject as JsonCreator

* mobile HU move prototyping

--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
@@ -1,12 +1,16 @@
 {
   "HU": "HU",
-  "barcode": "Barcode",
+  "qrCode": "QR code",
   "locator": "Locator",
   "product": "Product",
   "qty": "Quantity",
   "action": {
     "dispose": {
       "buttonCaption": "Dispose"
+    },
+    "move": {
+      "buttonCaption": "Move",
+      "scanTarget": "Scan target"
     },
     "scanAgain": {
       "buttonCaption": "Scan again"
