--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/en.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/en.json
@@ -1,12 +1,16 @@
 {
   "HU": "HU",
-  "barcode": "Barcode",
+  "qrCode": "QR code",
   "locator": "Locator",
   "product": "Product",
   "qty": "Quantity",
   "action": {
     "dispose": {
       "buttonCaption": "Dispose"
+    },
+    "move": {
+      "buttonCaption": "Move",
+      "scanTarget": "Scan target"
     },
     "scanAgain": {
       "buttonCaption": "Scan again"
