- cleanup clearance change

--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
@@ -20,7 +20,7 @@
     },
     "setClearance": {
       "buttonCaption": "HU-Freigabe ändern",
-      "clearanceNote": "Clearance note"
+      "clearanceNote": "Freigabebescheid"
     }
   }
 }
