mobile UI: HU Manager: Show if disposing

--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
@@ -2,8 +2,10 @@
   "HU": "HU",
   "qrCode": "QR code",
   "locator": "Lagerort",
+  "HUStatus": "Status",
   "product": "Produkt",
   "qty": "Menge",
+  "disposePendingStatus": "disposing",
   "action": {
     "dispose": {
       "buttonCaption": "Dispose"
