--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/en.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/en.json
@@ -2,8 +2,10 @@
   "HU": "HU",
   "qrCode": "QR code",
   "locator": "Locator",
+  "HUStatus": "Status",
   "product": "Product",
   "qty": "Quantity",
+  "disposePendingStatus": "disposing",
   "action": {
     "dispose": {
       "buttonCaption": "Dispose"
