- show clearanceNote in the header too if set
# Conflicts:
#	misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/components/HUInfoComponent.jsx
#	misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json

--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/en.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/en.json
@@ -5,6 +5,7 @@
   "HUStatus": "Status",
   "product": "Product",
   "clearanceStatus": "Clearance Status",
+  "clearanceNote": "Clearance Note",
   "qty": "Quantity",
   "disposePendingStatus": "disposing",
   "action": {
