--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
@@ -7,6 +7,7 @@
   "qty": "Menge",
   "disposePendingStatus": "disposing",
   "clearanceStatus": "Clearance Status",
+  "clearanceNote": "Freigabebescheid",
   "action": {
     "dispose": {
       "buttonCaption": "Dispose"
