--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/en.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/en.json
@@ -20,8 +20,7 @@
       "buttonCaption": "Scan again"
     },
     "setClearance": {
-      "buttonCaption": "Change HU clearance",
-      "clearanceNote": "Clearance note"
+      "buttonCaption": "Change HU clearance"
     }
   }
 }
