--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
@@ -7,7 +7,7 @@
   "qty": "Menge",
   "disposePendingStatus": "Entsorgen",
   "clearanceStatus": "Freigabestatus",
-  "clearanceNote": "Freigabebe-Notiz",
+  "clearanceNote": "Freigabe-Notiz",
   "action": {
     "dispose": {
       "buttonCaption": "Dispose"
