mobile UI: fix trl

--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
@@ -8,14 +8,14 @@
   "disposePendingStatus": "Entsorgen",
   "action": {
     "dispose": {
-      "buttonCaption": "Dispose"
+      "buttonCaption": "Entsorgen"
     },
     "move": {
-      "buttonCaption": "Move",
-      "scanTarget": "Scan target"
+      "buttonCaption": "Bewegen",
+      "scanTarget": "Lagerort scannen"
     },
     "scanAgain": {
-      "buttonCaption": "Scan again"
+      "buttonCaption": "Erneut scannen"
     }
   }
 }
