Setting clearance in mobileui (#12565)
* - HU clearance plumbing

# Conflicts:
#	misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/components/HUInfoComponent.jsx
#	misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json

* - cleanup clearance change

* - show current clearance status

* - re-fetch clearance statuses on status modal apply

* - merge clearance statuses

* - show clearanceNote in the header too if set

# Conflicts:
#	misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/components/HUInfoComponent.jsx
#	misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json

* - save empty clearanceNote in the store too

* - send clearance note only if status is present

* - translations

* - fix typo

* - update translation path

* - switch button's places

--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/de.json
@@ -6,6 +6,8 @@
   "product": "Produkt",
   "qty": "Menge",
   "disposePendingStatus": "Entsorgen",
+  "clearanceStatus": "Freigabestatus",
+  "clearanceNote": "Freigabe-Notiz",
   "action": {
     "dispose": {
       "buttonCaption": "Entsorgen"
@@ -16,6 +18,9 @@
     },
     "scanAgain": {
       "buttonCaption": "Erneut scannen"
+    },
+    "setClearance": {
+      "buttonCaption": "HU-Freigabe ändern"
     }
   }
 }
