--- a/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/en.json
+++ b/misc/services/mobile-webui/mobile-webui-frontend/src/apps/huManager/i18n/en.json
@@ -4,6 +4,8 @@
   "locator": "Locator",
   "HUStatus": "Status",
   "product": "Product",
+  "clearanceStatus": "Clearance Status",
+  "clearanceNote": "Clearance Note",
   "qty": "Quantity",
   "disposePendingStatus": "disposing",
   "action": {
@@ -16,6 +18,9 @@
     },
     "scanAgain": {
       "buttonCaption": "Scan again"
+    },
+    "setClearance": {
+      "buttonCaption": "Change HU clearance"
     }
   }
 }
